truyum-microservices/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server

  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/truyum-network: "true"
        io.kompose.service: eureka-server
    spec:
      containers:
      - image: abhi0112/truyum-menuitem-euraka-server
        imagePullPolicy: ""
        name: eureka-server
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
