truyum-microservices/menu-item-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: menu-item-service
  name: menu-item-service
spec:
  type: LoadBalancer
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: menu-item-service
status:
  loadBalancer: {}
