truyum-microservices/mysql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-server
  name: mysql-server
spec:
  type: LoadBalancer
  ports:
  - name: "3308"
    port: 3308
    targetPort: 3306
  selector:
    io.kompose.service: mysql-server
status:
  loadBalancer: {}
