truyum-microservices/truyum-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: truyum-network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/truyum-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/truyum-network: "true"
